# flora-software

./: .gitignore  README.md
Archives/Blazor_App_Test/: newProjectInstructions.md
Blazor_App_Test/: newProjectInstructions.md
Blazor_App_Test/testApp/: Program.cs  _Imports.razor
archive/basic-fileserver/: Cargo.toml
archive/basic-fileserver/src/: index.css  index.html  main.rs
archive/chat-ui/: chat-ui.sln
archive/chat-ui/Models/: Chat.cs  (+1 more)
basic-fileserver/: Cargo.toml  README.md
basic-fileserver/src/: main.rs
crash-dump/: esp32-server-crash.txt
firmware/: README  README.md  platformio.ini
firmware/AVAlink/: CMakeLists.txt
firmware/AVAlink-beta/: platformio.ini
firmware/boards/: t-beams3-supreme.json
firmware/include/: AVAlink.h  AVAlinkConfig.h  AVAlinkRadio.h  AVAlinkUtils.h  AVAlinkWeb.h  ConfigOptions.h  FloraNet.h  FloraNetConfig.h  FloraNetDebug.h  FloraNetPower.h  FloraNetProto.h  FloraNetRadio.h  FloraNetUtils.h  FloraNetWatchDog.h  FloraNetWeb.h  LogList.h  Message.h  PowerDrawTest.h  RetryTimer.h
firmware/src/: AVAlink.cpp  AVAlinkRadio.cpp  AVAlinkWeb.cpp  FloraNet.cpp  FloraNetPower.cpp  FloraNetProto.cpp  FloraNetRadio.cpp  FloraNetUtils.cpp  FloraNetWatchDog.cpp  FloraNetWeb.cpp  LogList.cpp  Message.cpp  PowerDrawTest.cpp  RetryTimer.cpp  main.cpp  sd-webserver.cpp
firmware/test/: mock_history.txt
resources/: top_level_diagram.drawio
testing/: README.md
testing/crash-dump/: esp32-server-crash.txt
testing/firmware/: testing-notes.md
testing/web-ui/: 08.10.2024-static-server-working.md
web-app/: API-outline.md
web-app/chat-ui/: .gitignore  Program.cs  _Imports.razor  index.html  style.css
web-app/chat-ui-desktop/: index.html
web-app/chat-ui-html/: history.JSON  index.html  lookup.JSON  script.js  style.css
web-app/chat-ui-mobile/: style.css
(+59 files in other folders)
