[package]
name = "basic-file-server"
version = "0.2.0"
authors = ["aahuinink <a_huinink@hotmail.ca>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.14.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.20.1", features = [ "esp32s3" ] }
esp-println = { version = "0.11.0", features = ["esp32s3", "log"] }
log = { version = "0.4.21" }
embedded-io = "0.6.1"
esp-wifi = { version = "0.9.1", features = ["esp32s3", "wifi", "wifi-default", "embassy-net", "utils"] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
embassy-time = "0.3.2"
embassy-executor = { version = "0.6.0", features = ["integrated-timers", "task-arena-size-12288"] }
static_cell = "2.1.0"
esp-hal-embassy = { version = "0.3.0", features = ["esp32s3", "integrated-timers"] }
embassy-sync = "0.6.0"
embassy-net = { version = "0.4.0", features = ["proto-ipv4", "tcp", "medium-ethernet"] }
embedded-io-async = "0.6.1"
picoserve = { version = "0.12.2", features = ["embassy"] }
embedded-sdmmc = "0.8.0"
embassy-embedded-hal = "0.2.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
